--- a/esp32/netmcu/.cproject
+++ b/esp32/netmcu/.cproject
@@ -47,58 +47,6 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.229133476" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/xtensa-esp32-elf/lib/gcc/xtensa-esp32-elf/8.2.0/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/xtensa-esp32-elf/xtensa-esp32-elf/sys-include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/xtensa/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/spiffs/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/mqtt/esp-mqtt/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/mbedtls/mbedtls/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/soc/soc/esp32/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_timer/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp32/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/unity/unity/src"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_eth/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_netif/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_https_ota/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_http_client/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/app_update/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_event/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/driver/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_common/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_rom/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_wifi/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/lwip/lwip/src/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/nvs_flash/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/freertos/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_system/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/log/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/xtensa-esp32-elf/xtensa-esp32-elf/include"/>
-                                    									
                                     <listOptionValue builtIn="false" value="&quot;${IDF_PATH}/components/freertos/include&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${IDF_PATH}/components/nvs_flash/include&quot;"/>
@@ -175,61 +123,7 @@
                             							
                             <tool id="cdt.managedbuild.tool.gnu.cross.assembler.1896714074" name="Cross GCC Assembler" superClass="cdt.managedbuild.tool.gnu.cross.assembler">
                                 								
-                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.both.asm.option.include.paths.112017746" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/xtensa-esp32-elf/lib/gcc/xtensa-esp32-elf/8.2.0/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/xtensa-esp32-elf/xtensa-esp32-elf/sys-include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/xtensa/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/spiffs/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/mqtt/esp-mqtt/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/mbedtls/mbedtls/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/soc/soc/esp32/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_timer/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp32/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/unity/unity/src"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_eth/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_netif/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_https_ota/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_http_client/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/app_update/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_event/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/driver/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_common/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_rom/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_wifi/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/lwip/lwip/src/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/nvs_flash/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/freertos/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/esp_system/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/esp-idf/components/log/include"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="/home/bertw/esp/xtensa-esp32-elf/xtensa-esp32-elf/include"/>
-                                    								
-                                </option>
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="gnu.both.asm.option.include.paths.112017746" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.gnu.assembler.input.916159226" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
                                 							
@@ -255,69 +149,7 @@
                 			
             </storageModule>
             			
-            <storageModule moduleId="org.eclipse.cdt.core.externalSettings">
-                				
-                <externalSettings containerId="components-mcu;" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier">
-                    					
-                    <externalSetting>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/xtensa-esp32-elf/lib/gcc/xtensa-esp32-elf/8.2.0/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/xtensa-esp32-elf/xtensa-esp32-elf/sys-include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/xtensa/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/spiffs/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/mqtt/esp-mqtt/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/mbedtls/mbedtls/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/soc/soc/esp32/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/esp_timer/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/esp32/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/unity/unity/src"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/esp_eth/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/esp_netif/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/esp_https_ota/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/esp_http_client/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/app_update/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/esp_event/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/driver/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/esp_common/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/esp_rom/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/esp_wifi/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/lwip/lwip/src/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/nvs_flash/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/freertos/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/esp_system/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/esp-idf/components/log/include"/>
-                        						
-                        <entry flags="RESOLVED" kind="includePath" name="/home/bertw/esp/xtensa-esp32-elf/xtensa-esp32-elf/include"/>
-                        					
-                    </externalSetting>
-                    				
-                </externalSettings>
-                			
-            </storageModule>
+            <storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
             		
         </cconfiguration>
         	
