Fix build files

--- a/esp32/netmcu/components/app/CMakeLists.txt
+++ b/esp32/netmcu/components/app/CMakeLists.txt
@@ -16,7 +16,8 @@ idf_component_register(
     SRCS ${srcs}
     INCLUDE_DIRS "./include" ../.. 
     PRIV_INCLUDE_DIRS . "./include/app" ../../main
-    REQUIRES userio main 
-    PRIV_REQUIRES storage net
-                  esp_https_ota
+    REQUIRES app_config debug misc 
+    PRIV_REQUIRES app_net app_config cli_app config debug key_value_store misc stm32 storage txtio net_mqtt_app
+                  nvs_flash esp_https_ota app_update
+            
 )
