--- a/esp32/netmcu/components/cli_app/CMakeLists.txt
+++ b/esp32/netmcu/components/cli_app/CMakeLists.txt
@@ -17,6 +17,6 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
     PRIV_INCLUDE_DIRS "./include/cli_app" ../../main/
-    REQUIRES cli
-    PRIV_REQUIRES app app_config app_net cli config debug main misc stm32 txtio userio net_http_server net_mqtt_app
+    REQUIRES cli userio_app
+    PRIV_REQUIRES app_config app cli config config_kvs debug misc net net_http_server net_mqtt_app net_mqtt stm32 txtio userio 
 )
