Get initial webapp mcuconfig values right

--- a/esp32/netmcu/components/http_server_content/webapp/Makefile
+++ b/esp32/netmcu/components/http_server_content/webapp/Makefile
@@ -39,7 +39,7 @@ bundle_out = build/wapp.js build/wapp.js.map build/wapp.css build/wapp.css.map b
 bundle_files = $(JS_BLD_DIR)/wapp.js $(JS_BLD_DIR)/wapp.js.map $(JS_BLD_DIR)/wapp.css $(JS_BLD_DIR)/wapp.css.map 
 
 .PHONY: bundle
-all: build/wapp.html build/wapp.js
+all: build/wapp.html build/wapp.js build/wapp.js.map
 
 
 
