--- a/esp32/netmcu/components/http_server_content/webapp/njs/package.json
+++ b/esp32/netmcu/components/http_server_content/webapp/njs/package.json
@@ -1,9 +1,12 @@
 {
-	"name": "tfmcu",
-	"version": "0.11.0",
+	"name": "rv-netmcu",
+	"version": "0.51.0",
 	"scripts": {
 		"build": "rollup -c",
-		"lint": "eslint . --ext .js,.svelte"
+		"autobuild": "useTailwind=yes rollup -c -w",
+		"lint": "eslint . --ext .js,.svelte",
+		"start": "echo publix",
+		"dev": "nollup -c"
 	},
 	"devDependencies": {
 		"@fullhuman/postcss-purgecss": "^2.2.0",
@@ -13,13 +16,17 @@
 		"eslint-plugin-svelte3": "^2.7.3",
 		"jshint": "^2.11.1",
 		"node-sass": "^4.14.1",
+		"nollup": "^0.12.2",
 		"postcss": "^7.0.32",
 		"postcss-load-config": "^2.1.0",
 		"rollup": "^2.21.0",
 		"rollup-plugin-eslint": "^7.0.0",
+		"rollup-plugin-hot": "0.0.31",
 		"rollup-plugin-livereload": "^1.3.0",
 		"rollup-plugin-svelte": "^5.2.2",
+		"rollup-plugin-svelte-hot": "^0.9.2",
 		"rollup-plugin-terser": "^6.1.0",
+		"sirv-cli": "^1.0.3",
 		"svelte": "^3.24.0",
 		"svelte-preprocess": "^3.9.12",
 		"tailwindcss": "^1.5.0"
