--- a/esp32/netmcu/components/http_server_content/webapp/njs/package.json
+++ b/esp32/netmcu/components/http_server_content/webapp/njs/package.json
@@ -25,6 +25,7 @@
 		"rollup-plugin-terser": "^6.1.0",
 		"sirv-cli": "^1.0.3",
 		"svelte": "^3.24.0",
+		"svelte-i18n": "^3.0.4",
 		"svelte-preprocess": "^3.9.12",
 		"tailwindcss": "^1.5.0"
 	},
