--- a/esp32/netmcu/components/webapp/Makefile
+++ b/esp32/netmcu/components/webapp/Makefile
@@ -16,7 +16,6 @@ SRC_SCSS := $(foreach dir,$(SRC_DIRS),$(wildcard $(dir)/*.css))
 SRC_ALL += $(SRC_SCSS)
 
 HTMLMIN ?= ~/.local/bin/htmlmin
-INCFILES ?= perl ./include_files.pl
 
 SED_OPTS_HTML =  -e 's/wapp_dev.js/\/wapp.js/'
 SED_OPTS = -E -e '/dev-delete-line/d' -e '/dev-delete-begin/,/dev-delete-end/d'
@@ -38,10 +37,10 @@ endif
 bundle_out = build/wapp.js build/wapp.js.map build/wapp.css build/wapp.css.map build/wapp.html
 bundle_files = $(JS_BLD_DIR)/wapp.js $(JS_BLD_DIR)/wapp.js.map $(JS_BLD_DIR)/wapp.css $(JS_BLD_DIR)/wapp.css.map 
 
+bundle_c = build/wapp.html.gz.c build/wapp.js.gz.c build/wapp.js.map.br.c build/wapp.css.gz.c
+
 .PHONY: bundle
-all: build/wapp.html.gz.c build/wapp.js.gz.c build/wapp.js.map.br.c build/wapp.css.gz.c
-
-
+all: $(bundle_c)
 
 $(addprefix njs/build_dev/wapp,.js .css .js.map .css.map): $(SRC_ALL) njs/node_modules
 	cd njs && env useTailwind=$(useTailwind) buildTarget=DEV npm run build
@@ -69,7 +68,7 @@ clean:
 #adapt development HTML file for usage in MCU webserver
 build/%.html: %_dev.html
 	mkdir -p build
-	cat $< | ${INCFILES} | sed  ${SED_OPTS} ${SED_OPTS_HTML} | ${HTMLMIN} >$@
+	cat $< | sed  ${SED_OPTS} ${SED_OPTS_HTML} | ${HTMLMIN} >$@
 
 .PHONY: proxy
 
