--- a/esp32/netmcu/components/webapp/njs/package.json
+++ b/esp32/netmcu/components/webapp/njs/package.json
@@ -2,7 +2,7 @@
 	"name": "rv-netmcu",
 	"version": "0.51.0",
 	"scripts": {
-		"build": "rollup -c",
+		"build": "useTailwind=yes rollup -c",
 		"autobuild": "useTailwind=yes rollup -c -w",
 		"lint": "eslint . --ext .js,.svelte",
 		"start": "echo publix",
