--- a/stm32/rv/.cproject
+++ b/stm32/rv/.cproject
@@ -377,7 +377,6 @@
 			<resource resourceType="PROJECT" workspacePath="/rv"/>
 		</configuration>
 	</storageModule>
-	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
@@ -405,5 +404,25 @@
 		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1911244868.1829653637;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1911244868.1829653637.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.1026876859;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.2110848525">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
+	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
+		<buildTargets>
+			<target name="all_tests" path="" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
+				<buildCommand>make</buildCommand>
+				<buildArguments>-C ../test/host</buildArguments>
+				<buildTarget>all_tests</buildTarget>
+				<stopOnError>true</stopOnError>
+				<useDefaultCommand>false</useDefaultCommand>
+				<runAllBuilders>false</runAllBuilders>
+			</target>
+			<target name="pwd" path="" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
+				<buildCommand>pwd</buildCommand>
+				<buildArguments/>
+				<buildTarget/>
+				<stopOnError>true</stopOnError>
+				<useDefaultCommand>false</useDefaultCommand>
+				<runAllBuilders>false</runAllBuilders>
+			</target>
+		</buildTargets>
 	</storageModule>
 </cproject>
