--- a/esp32/netmcu/components/webapp/njs/package.json
+++ b/esp32/netmcu/components/webapp/njs/package.json
@@ -10,24 +10,26 @@
 	},
 	"devDependencies": {
 		"@fullhuman/postcss-purgecss": "^2.2.0",
+		"@rollup/plugin-commonjs": "^14.0.0",
 		"@rollup/plugin-json": "^4.0.3",
 		"@rollup/plugin-node-resolve": "^8.4.0",
 		"@rollup/plugin-strip": "^1.3.3",
 		"eslint-plugin-svelte3": "^2.7.3",
-		"jshint": "^2.11.1",
+		"js-base64": "^3.4.5",
+		"jshint": "^2.12.0",
 		"node-sass": "^4.14.1",
-		"nollup": "^0.12.2",
+		"nollup": "^0.12.3",
 		"postcss": "^7.0.32",
 		"postcss-load-config": "^2.1.0",
-		"rollup": "^2.22.1",
+		"rollup": "^2.23.1",
 		"rollup-plugin-eslint": "^7.0.0",
 		"rollup-plugin-svelte": "^5.2.2",
 		"rollup-plugin-terser": "^6.1.0",
-		"sirv-cli": "^1.0.3",
-		"svelte": "^3.24.0",
+		"sirv-cli": "^1.0.5",
+		"svelte": "^3.24.1",
 		"svelte-i18n": "^3.0.4",
 		"svelte-preprocess": "^3.9.12",
-		"tailwindcss": "^1.5.2"
+		"tailwindcss": "^1.6.2"
 	},
 	"jshintConfig": {
 		"esversion": 6,
